sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  for (i<- 1 to getNombreValeurs()-1)
      {
        
        
        
        
        
      }
  
  
  
  
  getValeur(idx:Int)
}